--- a/ToDoList.html
+++ b/ToDoList.html
@@ -7,6 +7,8 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
     <title> Simple TO DO List </title>
 
     <style>
@@ -138,7 +140,7 @@
             font-size:20px;
         }
 
-        .reset {
+        .edit, .reset, .mark {
             display: inline-block;
             width: 20%;
             background-color: #c3c3c3;
@@ -146,24 +148,38 @@
             color: #000000;
             padding: 5px;
             text-align: center;
-            margin-left: 80%;
+            float: right;
+            margin-left: 5px;
             margin-top: 10px;
         }
 
-        .reset:disabled {
+        .reset:disabled, .edit:disabled, .mark:disabled {
             background-color: #e6e6e6;
             border: 3px solid #c3c3c3;
             color: #c3c3c3;
         }
 
-        .reset:hover {
-            border: 3px solid #959595;
+        .mark:hover {
+            background-color: rgb(1, 182, 53, 30%);
+            border: 3px solid rgb(1, 182, 53, 80%);
         }
 
-        .reset:active {
+        .edit:hover {
+            background-color: rgb(255, 104, 0, 30%);
+            border: 3px solid rgb(255, 104, 0, 80%);
+        }
+
+        .reset:hover {
+            background-color: rgb(236, 28, 36, 20%);
+            border: 3px solid rgb(236, 28, 36, 60%);
+        }
+
+        .reset:active, .edit:active, .mark:active {
             background-color: #898989;
             border: 3px solid #898989;
         }
+
+        
 
     </style>
 
@@ -171,7 +187,7 @@
 <body onload="updateList(); showColors();">          
 
     <div class="form" >            
-            <input class="txtinput" type="text" name="newtask" id="newtsk" placeholder="New task">
+            <input class="txtinput" type="text" name="newtask" id="newtsk" placeholder="New task" >
             <select class="colorlist" id="colors" ></select>
             <input class="btninput" on onclick="newTask(document.getElementsByClassName('txtinput')[0].value,
                 document.getElementById('colors').style)" type="button" value="Add">
@@ -183,16 +199,20 @@
             <ul class="list">
                 <li id="0"> <i class="material-icons">attach_file</i> <input type="checkbox" onclick="checkListTask(this)" name="rowArray[]" id="ch0"> <label for="ch0">
                     My first task today ... </label> </li>
-                <li id="1"> <i class="material-icons">attach_file</i> <input type="checkbox" onclick="checkListTask(this)" name="rowArray[]" id="ch1"> <label for="ch1">
+                <li id="1" > <i class="material-icons">attach_file</i> <input type="checkbox" onclick="checkListTask(this)"  name="rowArray[]" id="ch1"> <label for="ch1">
                     My task onother day ...<br> and much more ... </label> </li>
             </ul>
+            
+            <input class="edit" type="submit" value="Edit" onclick="editTask()">
             <input class="reset" type="submit" value="Clear" onclick="deleteTasks()">
+            <input class="mark" type="submit" value="Mark done" onclick="markTask()">
+
         </div>
     </div>
 
     <p id="checked"></p>
 
-    <script src="tojscript.js"></script>
+    <script src="tojscript.js" type="text/javascript"></script>
 
 </body>
 </html>
