Color picker moved lower

--- a/ToDoList.html
+++ b/ToDoList.html
@@ -22,13 +22,14 @@
             <button class="colorbtn" id="colorbtn" type="button"> <i class="material-icons">format_color_fill</i> </button>
             <input class="btninput" on onclick="newTask(document.getElementsByClassName('txtinput')[0].value,
                 $('.colorbtn').css('background-color'), $('.colorbtn').css('borderTopColor'))" type="button" value="Add">            
-            <div class="colorSlider" style="display: none;">
-                <div class="coltitle"><i class="material-icons">colorize</i> Choose color </div><div></div> <div></div> <div></div> <div></div>
-                <div></div> <div></div> <div></div> <div></div> <div></div>
-            </div>
+            
     </div>
 
     <div class="listdiv">
+        <div class="colorSlider" style="display: none;">
+            <div class="coltitle"><i class="material-icons">invert_colors</i> Color </div><div></div> <div></div> <div></div> <div></div>
+            <div></div> <div></div> <div></div> <div></div> <div></div>
+        </div>
         <h3 class="title"><i class="material-icons" style="font-size: 20px;vertical-align: middle;">bookmark_border</i> TO DO List <small>ver 0.4</small> </h3>
         <div class="formlist">
             <ul class="list">
