--- a/ToDoList.html
+++ b/ToDoList.html
@@ -48,7 +48,7 @@
 
     <p id="checked"></p>
 
-    <script src="tojscript.js" type="text/javascript"></script>
+    <script src="todo.js" type="text/javascript"></script>
 
 </body>
 </html>
